--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -1,6 +1,4 @@
 # GUIDELINES FOR APPLYING LRPS {#guidelines}
-<!--CH question: what verb tense should I use in this section. I've tried present, but might not be entirely consistent-->
-
 
 ## Stepwise approach for selecting LRPs
 
@@ -8,35 +6,26 @@ We recommend a step-wise approach for identifying LRPs, with the proportion of c
 
 ### Data Availability and Spatial Scale(Step 1)
 
-The first step is to compile CU-level data to support biological status assessments as described under the Wild Salmon Policy [@holtIndicatorsStatusBenchmarks2009a; @holtEvaluatingBenchmarksBiological2018], where those data exist. These data include (but are not limited to) time-series of spawner abundances and biological benchmarks on spawner abundances.  This step generally includes aggregating fine-spatial scale data on stocks or spawning sites to the CU level. 
+The first step is to compile CU-level data to support biological status assessments as described under the WSP [@holtIndicatorsStatusBenchmarks2009a; @holtEvaluatingBenchmarksBiological2018], where those data exist. These data include (but are not limited to) time-series of spawner abundances and biological benchmarks on spawner abundances.  This step generally includes aggregating fine scale data on stocks or spawning sites to the CU level. 
 
-In some cases, finer spatial scales (e.g., watersheds within CUs) may be considered to delineate serious harm to the SMU. Although CUs are the population unit of assessment and conservation required under the WSP, distribution of spawning within CUs, for example among watersheds, can be an important component of status [@holtIndicatorsStatusBenchmarks2009a] and these finer scales can be considered. 
+In some cases, spatial scales within CUs (e.g., watersheds or subpopulations within CUs) may be considered to delineate serious harm to the SMU. Although CUs are the population unit of assessment and conservation required under the WSP, distribution of spawning within CUs, for example among watersheds, can be an important component of status [@holtIndicatorsStatusBenchmarks2009a] and these finer scales can be considered. 
 
-Distribution is a commonly cited component of salmon viablity and recovery [@mcelhanyViableSalmonidPopulations2010]. When applied to the identification of recovery targets for Pacific salmon, @bradfordReviewBiologicalPrinciples2004 defined the relevant scale of distribution as spatial units that are demographically independent such that the  population dynamics of one unit are unlikely to affect the dynamics of another, but that genetic exchange is expected to occur at greater rates than observed among populations (CUs), and would likely exceed 10 effective migrants/generation. When applying these criteria to Interior Fraser Coho, they defined subpopulations on the basis of large watersheds or lakes, or partial barriers to migration. 
+Distribution is a commonly cited component of salmon viability and recovery [@mcelhanyViableSalmonidPopulations2010]. When applied to the identification of recovery targets for Pacific salmon, @bradfordReviewBiologicalPrinciples2004 defined the relevant scale of distribution as spatial units that are demographically independent such that the  population dynamics of one unit are unlikely to affect the dynamics of another, but that genetic exchange is expected to occur at greater rates than observed among populations (CUs), and would likely exceed 10 effective migrants/generation. When applying these criteria to Interior Fraser River Coho salmon, @bradfordReviewBiologicalPrinciples2004 defined subpopulations on the basis of large watersheds or lakes, or partial barriers to migration. 
 
-We recommend that the decision on spatial scale of conservation for biological assessments be part of the peer-review process for SMU assessments, and be based on biological principles of conservation and viability (e.g., as reviewed in @bradfordReviewBiologicalPrinciples2004). 
+We recommend that the decision on spatial scale of conservation for biological assessments be part of the peer-review process for CU and SMU assessments, and be based on biological principles of conservation and viability (e.g., as reviewed in @bradfordReviewBiologicalPrinciples2004 and @mcelhanyViableSalmonidPopulations2010). 
 
-<!--CH: this next pgh needs to be reworked and shortened given the section in the Intro. Same for the section in the WCVK CK case study-->
-For many stocks, hatcheries contribute to spawning abundances and are used as a conservation tool and to increase the availability of fish for harvest. Hatchery enhancement can also reduce wild genetic diversity and are considered a risk factor for the long-term sustainability of CUs [@withlerGeneticallyBasedTargets2018]. Salmon that are enhanced by hatcheries are not considered "wild" under the Wild Salmon Policy and not included in assessments of biological status. Therefore only indicator stocks without significant enhancement were included in our analyses. Proportionate Natural Influence, PNI, is a metric of the genetic risk of hatcheries on natural populations, with values < 0.5 indicating Integrated-Hatchery populations where most fish are hatchery origin [@withlerGeneticallyBasedTargets2018]. Only stocks with PNI values $\geqslant$ 0.5 were included in the development of LRPs and assessment against those LRPs. Stricter definitions of hatchery enhancement were considered (e.g., including only populations with PNI values $\geqslant$ 0.72, Integrated-Wild populations @withlerGeneticallyBasedTargets2018). In practice, applying this stricter threshold resulted in excluding almost all available data for our case study, West Coast Vancouver Island Chinook Salmon, a species <!-- an SMU? --> that is widely enhanced. Adopting a slightly lower threshold of $\geqslant$ 0.5, a level associated with most fish being natural origin, was the result of a trade-off between assessing remaining CU-level biodiversity and excluding hatchery impacts. <!--CH: comment. some of this text is repeated in the Case Study paper for WCVI CK. Remove the middle two sentences here on PNI, or keep them here, but adjust/shorten them in the Case study paper?
-you could remove it from here or leave in both. 
---> 
-  
+Within this step, information on hatchery enhancement is used to identify populations where production is dominated by hatchery-origin fish and PNI values are <0.5 (excluded from analyses) from those where production is dominated by natural-origin fish and PNI values are $\geqslant$ 0.5 (provisionally included in analyses) [@withlerGeneticallyBasedTargets2018]. Further, where time-series of the proportion of marked fish on the spawning grounds are available for hatchery-influenced systems dominated by natural production, these proportions can be used to identify time-series of natural-origin recruitment for benchmark estimation and natural-origin spawners for status assessment against benchmarks that are not sensitive to annual variation in hatchery production.  
 
   
 ### Assessing Data Deficiency (Step 2)
-  
 
-Second, CUs with data to support biological assessments are identified. CUs are assessed based on a variety of metrics including abundances and trends, and are considered data deficient when data or benchmarks are insufficient on all metrics for assessments under the WSP [@holtIndicatorsStatusBenchmarks2009a]. For example, CUs are only considered data deficient when data to assess temporal trends in spawner abundances (over at least 3 generations) and data on current spawner abundances and associated CU-level abundance benchmarks are missing or insufficient. As a general guideline, we define current spawner abundances as the geometric average spawner abundances over the  most recent generation, where data are insufficient on abundances if there are no data in the most recent generation. For short-term trend analyses, data are considered insufficient if they include less than half of available years or are of low quality representing only presence/absence, similar to criteria described in @brown2020SummaryAbundance2020 applied to spawning sites of Chinook salmon in Southern BC. 
+Second, CUs with data to support biological assessments are identified. CUs are assessed based on a variety of metrics including abundances and trends, and are considered data deficient when data or benchmarks are insufficient on all metrics for assessments under the WSP [@holtIndicatorsStatusBenchmarks2009a]. For example, CUs are only considered data deficient when data to assess temporal trends in spawner abundances (over at least 3 generations) and data on current spawner abundances and associated CU-level abundance benchmarks are missing or insufficient. As a general guideline, we define current spawner abundances as the geometric average spawner abundances over the  most recent generation, where data are insufficient on abundances if there are no data in the most recent generation. For short-term trend analyses, data are considered insufficient if they include less than half of available years or are of low quality representing only presence/absence, similar to criteria described in @brown2020SummaryAbundance2020 applied to spawning sites of Chinook Salmon in Southern BC. 
 
 
-CU-specific benchmarks on spawner abundances can be derived from spawner-recruitment models, percentiles of spawner time-series, or habitat characteristics. Data requirements for benchmark estimation on spawner abundances differ according to the methods applied and are not explicitly defined here. For example, spawner-recruitment benchmarks developed from hierarchical multi-stock models require fewer years of data than those based on individual stock-recruitment models. In addition, changes in environmental conditions over time may result in historical data that are no longer representative of current conditions, resulting in data deficiencies related to trend metrics and benchmarks on spawner abundances. Local biological expertise is required to review available data and benchmarks prior to assessments to identify data deficiencies.
+CU-specific benchmarks on spawner abundances can be derived from spawner-recruitment models, percentiles of spawner time-series, or habitat characteristics. Data requirements for benchmark estimation on spawner abundances differ according to the methods applied and are not explicitly defined here. For example, spawner-recruitment benchmarks developed from hierarchical multi-stock models require fewer years of data than those based on individual stock-recruitment models. In addition, changes in environmental conditions over time may result in historical data that are no longer representative of current conditions, resulting in data deficiencies. Local biological expertise is required to review available data and benchmarks prior to assessments to identify data deficiencies.
 
-In addition, a CU may be data deficient if data to resolve the existence of the CU is insufficient. For example, @holtbyConservationUnitsPacific2007 describe provisional CUs pending acquisition of genetic samples to differentiate them from neighbouring CUs. 
+In addition, a CU may be data deficient if data to resolve the existence of the CU is insufficient. For example, @holtbyConservationUnitsPacific2007 describe provisional CUs pending acquisition of genetic samples to differentiate them from neighbouring CUs. Further work ground-truthing, expanding, and updating these guidelines for data deficiencies in the context of different salmon species, life-histories, and assessment metrics is warranted. 
 
-Further work ground-truthing, expanding, and updating these guidelines for data deficiencies in the context of different salmon species, life-histories, and assessment metrics is warranted. 
-<!--CH comment: Examples of reports that could inform DD: PSE documentation, Brown et al. 2020, Skeena/Nass draft data report, SoS reports,  WSPmetrics github readmewiki (none on wiki, but I imagine DD rules are built in there somewhere.)  I've asked Gottfried and Bronwyn for advice from SoS, but no response
-CW: I think it may be beneficial to cite these. Especially Brown et al. as it has been published. -- I am not sure bout what the others are?
--->
 
 ### Can Data Deficient CUs be Represented by CUs With Data? (Step 3)
 <!-- CH comment: send this section to Ron Kadowaki, Diana Dobson, and Brendan for review-->
@@ -44,11 +33,12 @@ CW: I think it may be beneficial to cite these. Especially Brown et al. as it ha
 Third, the extent to which status of data deficient CUs can be inferred from CUs with data is evaluated. By definition, data deficient CUs do not have data on population dynamics to rigorously evaluate this inference through SMU-specific correlation analyses, though information on threats and biological characteristics may be available. To infer status for data deficient CUs, at a minimum we recommend providing evidence that: (i) the threats impacting data deficient CUs are likely to be the same as for CUs with data,  (ii) environmental drivers are also similar among CUs, e.g., as reflected by the distribution of CUs across biogeoclimatic and Marine Adaptive zones, and (iii) biological characteristics, such as life-history type and dominant age-at-maturity of data-deficient CUs are represented in the CUs with data, and (iv) habitat capacity of data deficient CU is likely in the range of those represented by CUs with data. Evidence supporting these criteria should be clearly documented and reviewed by local experts. The burden of proof would be to identify that data deficient CUs have similar properties to neighbouring CUs, with the default assumption that each CU represents unique biodiversity where status and trends cannot be represented by other CUs. 
 
 
-Overall, our goal in this step is to identify if status and trends of CUs are likely to be consistent within an SMU. We refer to LRPs where data deficient CUs are represented by CUs with data as 'interim LRPs', to be applied provisionally until all component CUs can be assessed. In some cases natural variability alone may result in differences in status and trends even if the 4 criteria listed below are met, which underscores the benefits of monitoring and assessing all component CUs. <!--CH questions: Do we want to call these interim LRPs if collecting data for those remote CUs isn't practical/feasible and we think they probably covary with other CUs based on our criteria?  Or instead should we prioritize collection of data for CUs that fail to meet the criteria above, over those that meet them (see last paragraph of this sub-section)?. However, the results from the IFR analysis removing CUs, demonstrated that SMU status is usually biased positive (overoptimistic) when only a subset of CUs are used, so maybe it is appropriate for us to call these interim LRPs?  If they are 'interim', can they still be used to trigger a rebuilding plan under FSPs of the Fisheries Act?-->
+Overall, our goal in this step is to identify if status and trends of CUs are likely to be consistent within an SMU. We refer to statuses against LRPs where data deficient CUs are represented by CUs with data as 'interim status', which is provisional until all component CUs can be assessed. In some cases natural variability alone may result in differences in status and trends even if the 4 criteria listed below are met, which underscores the benefits of monitoring and assessing all component CUs. <!--CH additional sentence to address possible 'weakening' of LRP status with word interim--> For LRPs based on 100% of CUs being above red status, an interim status indicating a breach of the LRP (i.e., at least one CU with red status) can still be used to trigger a rebuilding plan under the Fish Stock provisions since the improved monitoring of data-deficient CUs alone will not result in an increase in SMU status to 100% (all CUs above red status). 
 
 
 <!--CW: From the PA Policy:
 I'm sorry, I think I'd like to change my mind here. even if not all CUs are directly assessed, an LRP is still consistent with the PA policy and based on "best available science". Thinking about it again, I agree with Carrie that "interim" weakens the LRP. 
+CH: Does the additional sentence above address this issue? I think interim gives incentives to monitor if all CUs are > red, but doesn't stop triggering FSP if interim status is below LRP.
 
 "In resource management, the PA is, in general, about being cautious when scientific information is uncertain, unreliable or inadequate and not using the absence of adequate scientific information as a reason to postpone or fail to take action to avoid serious harm to the resource."
 But also:
@@ -65,16 +55,15 @@ This may be a bit out there but: maybe we could suggest the establishment of a d
 
 Similarity in **environmental conditions and drivers** in estuarine and freshwater habitat as reflected in, for example, hydrological regimes and macroclimate in spawning and rearing areas. Differences in hydrological regimes, such as whether systems are fed by rainfall or snowmelt can impact biological characteristics of Chinook salmon, such as spawning time and age and therefore status and trends [@beechieHydrologicRegimeConservation2006]. Broad similarities in macroclimate can be represented Biogeoclimatic Zones, defined as "geographic areas having similar patterns of energy flow, vegetation and soils as a result of a broadly homogenous macroclimate." [@medingerEcosystemsBritishColumbia1991]<!--remove; (BC Ministry of Forestry 2021, https://www.for.gov.bc.ca/hfd/library/documents/glossary/Glossary.pdf). In other words, these terrestrial zones have relatively uniform climate and vegetation. There are approximately 18 biogeoclimatic zones in BC and the Yukon, ranging from Coastal Douglas-Fir on southeastern Vancouver Island to Boreal White and Black Spruce in northern BC. --> CUs with spawning and rearing grounds within different biogeoclimatic zones may experience different macroclimates and hence environmental drivers in estuaries and freshwater. Instead of biogeoclimatic zones, @holtbyConservationUnitsPacific2007 delineate freshwater ecological drainage units to differentiate freshwater ecosystems for Pacific salmon ("Freshwater Adaptive Zones"). These units are defined primarily based on "Ecological Drainage Units" [@ministryoftheenvironmentEcologicalAquaticUnits2021] and consist of salmon populations with shared zoogeographic histories at relatively fine spatial scales such that each CU tends to be associated with a unique unit. Therefore those units are less useful for identifying similarity in environmental conditions among CUs, though other levels of aggregation of Ecological Drainage Units could be developed in the future to inform similarities in freshwater conditions among CUs.
 
-To identify similarities in environmental conditions and drivers in the nearshore marine environment, @holtbyConservationUnitsPacific2007 describe Marine Adaptive zones for Pacific salmon which reflect "watershed-coastal ecosystems of distinct physical characteristics, including the full sequence of riverine, estuarine, and near-short marine habitats used by juvenile anadromous salmonids" (p.14). There are 12 Marine Adaptive zones for Pacific salmon in BC and the Yukon, ranging from the Strait of Georgia in the south to the Bering Sea in the north (COSEWIC 2021 in press). Although SMUs are usually defined to be spatially cohesive groups of CUs and therefore component CUs may experience similar environmental conditions, SMUs and their component CUs often span multiple biogeoclimatic zones and Marine Adaptive zones.  
+To identify similarities in environmental conditions and drivers in the nearshore marine environment, @holtbyConservationUnitsPacific2007 describe Marine Adaptive zones for Pacific salmon which reflect "watershed-coastal ecosystems of distinct physical characteristics, including the full sequence of riverine, estuarine, and near-short marine habitats used by juvenile anadromous salmonids". There are 12 Marine Adaptive zones for Pacific salmon in BC and the Yukon, ranging from the Strait of Georgia in the south to the Bering Sea in the north (COSEWIC 2021 in press)<!--footnote this if not published-->. Although SMUs are usually defined to be spatially cohesive groups of CUs and therefore component CUs may experience similar environmental conditions, SMUs and their component CUs often span multiple hydrological regimes, biogeoclimatic zones, and Marine Adaptive zones.  
 
-CUs containing unique biogeoclimatic or Marine Adaptive zones within an SMU may have divergent statuses and trends from neighbouring CUs, either directly due to the different environments or their interaction with other natural drivers and anthropogenic threats.
+CUs containing unique environmental drivers within an SMU may have divergent statuses and trends from neighbouring CUs, either directly due to the different environments or their interaction with other natural drivers and anthropogenic threats.
 
 
 CUs with similar **life-history characteristics** are more likely to respond to common threats and environmental drivers in the same way compared with those with divergent characteristics. For example, Chinook Salmon exhibit at least two distinct life-histories, named stream and ocean types. Stream-type fish rear for more than a year in freshwater and tend to migrate far offshore during their marine stage, whereas ocean-type fish migrate to the ocean as subyearlings (< 1 year) and tend to remain near shore during marine life. These different emigration patterns are believed to have evolved as a consequence of differences in food resources and survival rates in the freshwater and marine environments, and result in different vulnerabilities to physical and biological conditions in those environments.  CUs with different life-history characteristics cannot be used to represent each other under data deficiencies. In some cases, SMUs have been defined to account for differences in life-history in order to better achieve joint status under common management regime (e.g., Fraser Chinook where SMUs are defined in part based on dominant ages at maturity). In other SMUs, CUs with various life-history types are combined (e.g., the Mainland Inlet Chinook SMU which contains CUs with ocean and stream-type fish) <!--CH: to confirm with Diana and Ron. CU34-HOMATH (ocean-type) and CU35-KLINA (stream-type) both in Mainland Inlets CK SMU-->.
 
-CUs with very different **habitat capacities** may respond differently to similar threats. For example very small CUs may be more vulnerable to moderate fishing pressure if abundances drop below critical conservation thresholds, e.g., 1500 fish an abundance threshold within the Rapid Multidimensional Scanner Tool, where as very large CUs may more resilient to common threats.    <!--CH: I think about COSEWIC criteria which identify DUs < 1000 as Threatened, and also DUs < 10,000 with declining trend as Threatened. For Pacific salmon, the habitat capacity of CUs can span this range (<1000 to >10,000) making some CUs inherently more vulnerable than others, presumably.-->
+CUs with very different **habitat capacities** may respond differently to similar threats. For example very small CUs may be more vulnerable to moderate fishing pressure if abundances drop below critical conservation thresholds, e.g., 1500 fish an abundance threshold within the Pacific Salmon Status Scanner, where as very large CUs may more resilient to common threats.    <!--CH: I think about COSEWIC criteria which identify DUs < 1000 as Threatened, and also DUs < 10,000 with declining trend as Threatened. For Pacific salmon, the habitat capacity of CUs can span this range (<1000 to >10,000) making some CUs inherently more vulnerable than others, presumably.-->
 <!--CW: I believe Luke also saw this effect in the Chum study case - i.e. smaller CUs were more likely to be below their benchmarks.-->
-
 
 
 In a meta-analysis of spawner time-series across Pacific salmon species throughout BC using data extracted from the Pacific Salmon Explorer Tool (PSE 2021)<!--CH: have to add ref to this URL. Add number of time-series included-->,  pairwise correlations in spawner abundances among CUs within SMUs tended to be positive for Pink, Chum, Coho, and Sockeye Salmon (Appendix Figure <!-- add Connors unpublished, or add Brendan as co-author. later preferable-->), providing some support for the use of data-rich CUs to inform CUs without data for those species. One caveat of this analysis is that CUs with available time-series tend to be more heavily managed and may not be representative of those without data which tend to be remote and without direct management interventions. In addition, the four criteria described above were not accounted for in selecting SMUs for inclusion, and so correlations may be biased low. For Chinook Salmon, correlations were more variable among CUs and sometimes negative, possibly due to the inclusion of CUs dominated by both stream-type and ocean-type fish within some SMUs. <!--CH: to check with with Brendan. Which SMUs were negative? Can we improve this guidance piece?-->
@@ -82,13 +71,7 @@ In a meta-analysis of spawner time-series across Pacific salmon species througho
 Overall, we suggest caution when representing SMU status with only a subset of CUs, and recommend evaluating and documenting the risks of incorrectly assigning status of data deficient CUs based on neighboring CUs. We also recommend further quantitative evaluation of these criteria using empirical data disaggregated by environmental zones, life-history types and management intensity, among other variables, and supported by simulation evaluation.  These criteria are not meant to be prescriptive, but to provide general guidelines for assessing possible inference for data deficient CUs. 
 
 
-If data-deficient CUs do not meet the criteria for inference from the remaining CUs within an SMU, we recommend collection of CU-level data to inform biological assessments. Data collection would therefore be prioritized for CUs that diverge in threats, environmental drivers, life-history capacities and/or habitat capacities from neighbouring CUs. <!--CH: Brendan suggested interim LRPs, but I"m not sure if/when they would apply. If DD CUs don't meet the criteria above, then we should not recommend developing LRPS from remaining CUs period. If 'interim' LRPs are those from SMUs with DD CUs that do meet the above criteria, this would capture amost all of our SMUs I think.   Do we want to call these interim LRPs if collecting data for those remote CUs isn't practical/feasible and we think they probably covary with other CUs based on our criteria?  We should prioritize collection of data for CUs that fail to meet the criteria above, over those that meet them. Perhaps we can bring this up at the next TWG mtg.-->
-<!--CH: on second thought, given the results from the IFR analysis removing CUs, showing that the CU status is usually biased positive (overoptimistic) when only a subset of CUs are used, maybe it is appropriate for us to call these interim LRPs?-->
-
-
-
-
-
+If data-deficient CUs do not meet the criteria for inference from the remaining CUs within an SMU, we recommend collection of CU-level data to inform biological assessments. Data collection would therefore be prioritized for CUs that diverge in threats, environmental drivers, life-history capacities and/or habitat capacities from neighbouring CUs. 
 
 
 ### Proportion of CUs Above Red Status Required to Avoid Serious Harm (Step 4)
