updated appendices in Guidelines paper

--- a/guidelinesWP/08-appendix.Rmd
+++ b/guidelinesWP/08-appendix.Rmd
@@ -5,9 +5,10 @@ After that, all subsequent sections will be turned into appendices. -->
 
 `r if(!knitr:::is_latex_output()) '# (APPENDIX) Appendix {-}'`
 
-# APPENDIX 1{#app:first-appendix}
 
-## Resources for the implementation of LRPs (links to be added)
+# Resources for the implementation of LRPs {#app:first-appendix}
+
+<!--(links to be added)-->
 
 - For single metrics, link to WSP metrics repository
 - For watershed-area model, link to Carrie's repository (currently private due to data concerns)
