edits to the coho chapter

--- a/guidelinesWP/03-chap3.Rmd
+++ b/guidelinesWP/03-chap3.Rmd
@@ -48,7 +48,14 @@ where, $p$ is probability, $B_0$ and $B_1$ are estimated logistic regression par
   (\#eq:logisticLRP)
 \end{equation}
 
-An example logistic regression fit is shown in Figure \@ref(fig:example-logisticFit), with LRPs associated with four probability thresholds, 0.5, 0.66, 0.90, 0.99, representing levels associated with being more likely than not, likely, very likely, and virtually certain as defined by the International Panel on Climate Change, IPCC [@mastrandreaGuidanceNoteLead2010]. We do not recommend a specific probability level here, and instead demonstrate the implication of various choices. Although LRPs are intended to be identified by Science to represent the best scientific estimate of level below which serious harm is occurring [@dfoScienceAdvicePrecautionary2021] without necessarily introducing additional precaution under uncertainty <!--ref?-->, there is no scientific basis to choose one probability over others. Uncertainty in logistic-regression based LRP estimates can be quantified based on a 95% confidence interval on the maximum likelihood estimate, MLE (see our application to Interior Fraser Coho Salmon (Holt et al. in review).  
+An example logistic regression fit is shown in Figure \@ref(fig:example-logisticFit), with LRPs associated with four probability thresholds, 0.5, 0.66, 0.90, 0.99, representing levels associated with being more likely than not, likely, very likely, and virtually certain as defined by the International Panel on Climate Change, IPCC [@mastrandreaGuidanceNoteLead2010]. We do not recommend a specific probability level here, and instead demonstrate the implication of various choices. Although LRPs are intended to be identified by Science to represent the best scientific estimate of level below which serious harm is occurring [@dfoScienceAdvicePrecautionary2021] without necessarily introducing additional precaution under uncertainty <!--ref?-->, there is no scientific basis to choose one probability over others. Uncertainty in logistic-regression based LRP estimates can be quantified based on a 95% confidence interval on the maximum likelihood estimate , MLE (see our application to Interior Fraser Coho Salmon (Holt et al. in review)). 
+<!-- CW: One could also quantify uncertainty based in a 95% Bayesian credibility interval. Suggest replacing the above sentence with:
+
+Uncertainty in logistic-regression based LRP estimates can be quantified based on confidence or creibility intervals on the LRP estimate (see our application to Interior Fraser Coho Salmon (Holt et al. in review)).
+
+
+
+ --> 
 
 
 ```{r example-logisticFit, fig.cap="Logistic regression fit to annual Bernoulli data to predict the probability of all CUs being above their lower benchmark (LBM) as a function of aggregate SMU abundance. Each black dot represent a year in the observed time series as a Bernoulli indicator showing whether the requirement of all CUs above their lower benchmark, LBM was met (success = 1) or not (failure = 0) as a function of aggregate spawning abundance to the SMU. The black solid line is the maximum likelihood model fit to indicator data, and the grey shaded region shows the 95\\% confidence interval around the fit model. Coloured lines illustrate aggregate abundance LRPs for 4 different probability thresholds: p* = 0.5 (yellow), 0.66 (blue), 0.90 (green), and 0.99 (orange) probability that all CUs > LBM. Horizontal dotted lines intersect the y-axis at each probability threshold, while the solid vertical lines show the corresponding aggregate escapement that will represent the LRP.", out.width = '60%', warning=FALSE, echo=FALSE, fig.align="center"}
