update case study .bib file, Sgen SMSY change format, chum discussion

--- a/caseStudyWP/bib/refs.bib
+++ b/caseStudyWP/bib/refs.bib
@@ -329,22 +329,6 @@
 	file = {Price et al. - 2019 - Genetics of century‐old fish scales reveal populat.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\ZIJLSLSQ\\Price et al. - 2019 - Genetics of century‐old fish scales reveal populat.pdf:application/pdf},
 }
 
-@article{pricePortfolioSimplificationArising2021,
-	title = {Portfolio simplification arising from a century of change in salmon population diversity and artificial production},
-	issn = {0021-8901, 1365-2664},
-	url = {https://onlinelibrary.wiley.com/doi/10.1111/1365-2664.13835},
-	doi = {10.1111/1365-2664.13835},
-	language = {en},
-	urldate = {2021-05-18},
-	journal = {Journal of Applied Ecology},
-	author = {Price, Michael H. H. and Moore, Jonathan W. and Connors, Brendan M. and Wilson, Kyle L. and Reynolds, John D.},
-	editor = {Punt, Andre},
-	month = feb,
-	year = {2021},
-	pages = {1365--2664.13835},
-	file = {Price et al. - 2021 - Portfolio simplification arising from a century of.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\TCN3SSGH\\Price et al. - 2021 - Portfolio simplification arising from a century of.pdf:application/pdf},
-}
-
 @techreport{bueEscapementGoalReview2001,
 	address = {Anchorage},
 	type = {Report to the {Board} of {Fisheries} {November} 2001},
@@ -548,10 +532,12 @@
 	file = {Korman et al. - Evaluation framework for assessing potential Pacif.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\55RZH9X5\\Korman et al. - Evaluation framework for assessing potential Pacif.pdf:application/pdf},
 }
 
-@misc{ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006,
-	title = {Conservation strategy for {Coho} {Salmon}  ({Oncorhynchus} kisutch), interior {Fraser} {River} populations. {Fisheries} and {Oceans} {Canada},  {Ottawa}, {Ont}. 132 p},
+@techreport{ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006,
+	title = {Conservation strategy for {Coho} {Salmon}  ({Oncorhynchus} kisutch), interior {Fraser} {River} populations},
+	institution = {Fisheries and Oceans Canada},
 	author = {{IFCRT (Interior Fraser Coho Recovery Team)}},
 	year = {2006},
+	pages = {132},
 }
 
 @article{paulyAnecdotesShiftingBaseline1995,
@@ -721,9 +707,22 @@
 	file = {Holt and Folkes - 2015 - Cautions on using percentile-based benchmarks of s.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\G2M7RGZB\\Holt and Folkes - 2015 - Cautions on using percentile-based benchmarks of s.pdf:application/pdf},
 }
 
+@article{holtEvaluatingBenchmarksBiological2018,
+	title = {Evaluating {Benchmarks} of {Biological} {Status} for {Data}-limited {Conservation} {Units} of {Pacific} {Salmon}, {Focusing} on {Chum} {Salmon} in {Southern} {BC}},
+	volume = {2018/011},
+	abstract = {Status assessments for Chum Salmon (Oncorhynchus keta) under the Wild Salmon Policy (WSP) have been limited, in part because recruitment time-series required to calculate stock- recruitment based benchmarks are not consistently available. Alternative benchmarks have been proposed for data-limited Conservation Units (CUs) using percentiles of the observed spawner abundance time-series. However, these benchmarks have not been evaluated against stock-recruitment benchmarks currently used to assess status on abundances for data-rich CUs. Our goals were to evaluate percentile-based benchmarks against stock-recruitment based benchmarks accounting for high uncertainties and possible biases in spawner abundances, catches, recruitment estimates, and age-at-maturity. We used two approaches to evaluate benchmarks based on a retrospective comparison through the historical record and a prospective simulation model under numerous hypothetical future scenarios. We demonstrate an approach for providing assessments that accounts for uncertainties in benchmarks, and provide advice on the applicability of percentile-based benchmarks for data-limited CUs of Chum Salmon relative to stock-recruitment benchmarks used for data-rich CUs. In general, our results support the application of percentile-based benchmarks for data-limited CUs of Chum Salmon when productivity is moderate to high ({\textgreater}2.5 recruits/spawner) and harvest rates are low to moderate (≤40\%). However, we suggest further evaluation of percentile benchmarks (and the consideration of alternatives) when productivity is expected to be low and/or harvest rates high. Under these conditions, concurrent declines in abundances and percentile benchmarks can results in status assessments that are more optimistic than those from stock-recruitment benchmarks due to shifting baselines.},
+	language = {en},
+	journal = {DFO Can. Sci. Advis. Sec. Res. Doc.},
+	author = {Holt, Carrie and Davis, Brooke and Dobson, Diana and Godbout, Lyse and Luedke, Wilf and Tadey, Joe and Van Will, P},
+	year = {2018},
+	pages = {ix + 77},
+	file = {Holt et al. - Evaluating Benchmarks of Biological Status for Dat.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\SWJCIYX6\\Holt et al. - Evaluating Benchmarks of Biological Status for Dat.pdf:application/pdf},
+}
+
 @techreport{dfoScienceAdvicePrecautionary2021,
 	type = {{DFO} {Can}. {Sci}. {Advis}. {Sec}. {Sci}. {Advis}. {Rep}},
 	title = {Science {Advice} for {Precautionary} {Approach} {Harvest} {Strategies} under the {Fish} {Stocks} {Provisions}},
+	url = {https://waves-vagues.dfo-mpo.gc.ca/Library/40965715.pdf},
 	abstract = {This Science Advisory Report (SAR) provides advice to the Science Sector concerning the implications of the revised Fisheries Act (2019), particularly the Fish Stocks provisions (FSP). The FSP are viewed in light of Canada’s Fishery Decision-Making Framework Incorporating the Precautionary Approach (the ‘PA Policy’). The advice is organized into sections according to the text of the new legislation. Key points selected from the recommendations in the body of this report appear below.},
 	language = {en},
 	number = {2021/004},
@@ -874,4 +873,25 @@ Our habitat-based model can generate biologically-based escapement goals, rooted
 	url = {https://salmonexplorer.ca/#!/vancouver-island-mainland-inlets/chum},
 	author = {{Pacific Salmon Foundation}},
 	year = {2021},
+}
+
+@techreport{godboutStockStatusWild2004a,
+	title = {Stock {Status} of {Wild} {Chum} {Salmon} (\textit{{Oncorhynchus} keta {Walbaum}}) {Returning} to {British} {Columbia}'s {Central} {Coast} and {Johnstone} and {Georgia} {Straits} (excluding the {Fraser} {River})},
+	url = {https://waves-vagues.dfo-mpo.gc.ca/Library/282237.pdf},
+	number = {2004/007},
+	institution = {Fisheries and Oceans Canada},
+	author = {Godbout, L and Irvine, J. R. and Bailey, D. and Van Will, P. and McConnell, C.},
+	year = {2004},
+	pages = {45},
+	file = {282237.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\95CI8IG5\\282237.pdf:application/pdf},
+}
+
+@article{arakiCarryoverEffectCaptive2009,
+	title = {Carry-over effect of captive breeding reduces reproductive ﬁtness of wild-born descendants in the wild},
+	language = {en},
+	journal = {Biol. Lett.},
+	author = {Araki, Hitoshi and Cooper, Becky and Blouin, Michael S},
+	year = {2009},
+	pages = {4},
+	file = {Araki et al. - 2009 - Carry-over effect of captive breeding reduces repr.pdf:C\:\\Users\\WarkentinL\\Zotero\\storage\\NKXLKWIE\\Araki et al. - 2009 - Carry-over effect of captive breeding reduces repr.pdf:application/pdf},
 }
