--- a/caseStudyWP/10-appendix.Rmd
+++ b/caseStudyWP/10-appendix.Rmd
@@ -1,7 +1,7 @@
 <!-- The following code should appear at the beginning of the first appendix.
 After that, all subsequent sections will be turned into appendices. -->
 
-# Retrospective analysis of CU benchmarks based on $S_{gen}$ and percentiles
+# Retrospective analysis of CU benchmarks based on S\textsubscript{gen} and percentiles
 
 *\textcolor{cyan}{LT: open to other name of this appendix*
 
@@ -9,26 +9,26 @@ After that, all subsequent sections will be turned into appendices. -->
 
 <!-- CW:Start with an opening paragraph explaining what this appendix is about , something like:
 
-We conducted a retrospective analysis using the data for the Inside South Coast Chum to evaluate the impacts of specific data points and the length of the time-series on the estimates of stock recruitment parameters, $S_{gen}$ and percentile benchmarks. 
+We conducted a retrospective analysis using the data for the Inside South Coast Chum to evaluate the impacts of specific data points and the length of the time-series on the estimates of stock recruitment parameters, S\textsubscript{gen} and percentile benchmarks. 
 -->
 
 
-In the retrospective analysis, the estimates of $\alpha$, $\beta$, and $S_{gen}$ changed as progressively more years of data were included (Figures \@ref(fig:chum-a-b-SMSY-Sgen-retro)). Note that these are not estimates based on a model that accounts for time-varying parameters. Rather, the estimates of $\alpha$, $\beta$, and $S_{gen}$ in a given year come from fitting a Ricker model to spawners and recruits for all years up to and including that year, for each CU. Each subsequent year includes another year of data. Thus, as more data is included, the estimates of $\alpha$, $\beta$, and $S_{gen}$ may change. These results should be interpreted with caution due to the large residuals in observed vs. predicted recruits. Since $\alpha$ and $\beta$ are correlated, the meaning of any trends in one parameter should be interpreted with the other parameter in mind, especially when model fits have large residuals. Similarly, since $\alpha$ and  $\beta$ determine $S_{MSY}$ and $S_{gen}$, changes in these derived parameters can be challenging to interpret and can be due to changes in $\alpha$,  $\beta$, and their relative values.
+In the retrospective analysis, the estimates of $\alpha$, $\beta$, and S\textsubscript{gen} changed as progressively more years of data were included (Figures \@ref(fig:chum-a-b-SMSY-Sgen-retro)). Note that these are not estimates based on a model that accounts for time-varying parameters. Rather, the estimates of $\alpha$, $\beta$, and S\textsubscript{gen} in a given year come from fitting a Ricker model to spawners and recruits for all years up to and including that year, for each CU. Each subsequent year includes another year of data. Thus, as more data is included, the estimates of $\alpha$, $\beta$, and S\textsubscript{gen} may change. These results should be interpreted with caution due to the large residuals in observed vs. predicted recruits. Since $\alpha$ and $\beta$ are correlated, the meaning of any trends in one parameter should be interpreted with the other parameter in mind, especially when model fits have large residuals. Similarly, since $\alpha$ and  $\beta$ determine S\textsubscript{MSY} and S\textsubscript{gen}, changes in these derived parameters can be challenging to interpret and can be due to changes in $\alpha$,  $\beta$, and their relative values.
 
-```{r chum-a-b-SMSY-Sgen-retro, fig.cap="Retrospective estimates of $\\alpha$, $\\beta$, $S_{gen}$ (black line with gray confidence intervals) and $S_{MSY}$ (blue line) for five CUs in the Inside South Coast Chum SMU. Note y axis is identical across CUs for $\\alpha$ but varies for other parameters.", warning=FALSE, echo=FALSE, fig.align="center"}
+```{r chum-a-b-SMSY-Sgen-retro, fig.cap="Retrospective estimates of $\\alpha$, $\\beta$, S\textsubscript{gen} (black line with gray confidence intervals) and S\textsubscript{MSY} (blue line) for five CUs in the Inside South Coast Chum SMU. Note y axis is identical across CUs for $\\alpha$ but varies for other parameters.", warning=FALSE, echo=FALSE, fig.align="center"}
 download.file('https://github.com/Pacific-salmon-assess/SalmonLRP_RetroEval/raw/master/SCChumStudy/Figures/fig_a_b_SMSY_Sgen_retro.png', './figure/chum-a-b-SMSY-Sgen-retro.png',  mode="wb")
 knitr::include_graphics('figure/chum-a-b-SMSY-Sgen-retro.png')
 ```
 
-Retrospective estimates of $\alpha$ and $\beta$ for Southern Coastal Streams show declines over time. $S_{MSY}$ and $S_{gen}$ increase sharply in the first few years due to large decreases in $\alpha$ and $\beta$. $S_{MSY}$ then decreases over time, while $S_{gen}$ stays relatively stable. This is because as $\alpha$ decreases below ~2.5, $S_{gen}$ decreases, but as $\beta$ decreases, $S_{gen}$ decreases, so that a simultaneous decrease in $\alpha$ and $\beta$ can cancel out. However, the lower alpha is below 2.5, the less influence $\beta$ has on $S_{gen}$. *\textcolor{cyan}{This is from my work on sensitivity of Sgen and SMSY to alpha and beta. Not sure if we can include here}*
+Retrospective estimates of $\alpha$ and $\beta$ for Southern Coastal Streams show declines over time. S\textsubscript{MSY} and S\textsubscript{gen} increase sharply in the first few years due to large decreases in $\alpha$ and $\beta$. S\textsubscript{MSY} then decreases over time, while S\textsubscript{gen} stays relatively stable. This is because as $\alpha$ decreases below ~2.5, S\textsubscript{gen} decreases, but as $\beta$ decreases, S\textsubscript{gen} decreases, so that a simultaneous decrease in $\alpha$ and $\beta$ can cancel out. However, the lower alpha is below 2.5, the less influence $\beta$ has on S\textsubscript{gen}. *\textcolor{cyan}{This is from my work on sensitivity of Sgen and SMSY to alpha and beta. Not sure if we can include here}*
 
-Increasing $S_{gen}$ for North East Vancouver Island is mainly due to an increase in $\alpha$ from <1.5 to >2 and then a decrease in $\beta$. 
+Increasing S\textsubscript{gen} for North East Vancouver Island is mainly due to an increase in $\alpha$ from <1.5 to >2 and then a decrease in $\beta$. 
 
-$\alpha$ for Loughborough showed modest decreases over time, and $S_{gen}$ was fairly stable. 
+$\alpha$ for Loughborough showed modest decreases over time, and S\textsubscript{gen} was fairly stable. 
 
-The Georgia Strait CU shows evidence of increasing $\alpha$, and its $S_{gen}$ estimate was fairly stable. 
+The Georgia Strait CU shows evidence of increasing $\alpha$, and its S\textsubscript{gen} estimate was fairly stable. 
 
-Howe Sound-Burrard Inlet $S_{gen}$ was fairly stable, and then increased due to  decreases in $\alpha$ and $\beta$. 
+Howe Sound-Burrard Inlet S\textsubscript{gen} was fairly stable, and then increased due to  decreases in $\alpha$ and $\beta$. 
 
 
 
@@ -37,7 +37,7 @@ download.file('https://github.com/Pacific-salmon-assess/SalmonLRP_RetroEval/raw/
 knitr::include_graphics('figure/chum-perc-retro.png')
 ```
 
-```{r chum-logistic-sgen, fig.cap="Logistic regression of whether escapement of all component CUs were above their $S_{gen}$ benchmarks based on aggregate abundance, for Inside South Coast Chum SMU. Includes the 5 CUs without CU-level infilling (no Bute Inlet or Upper Knight)", warning=FALSE, echo=FALSE, fig.align="center"}
+```{r chum-logistic-sgen, fig.cap="Logistic regression of whether escapement of all component CUs were above their S\textsubscript{gen} benchmarks based on aggregate abundance, for Inside South Coast Chum SMU. Includes the 5 CUs without CU-level infilling (no Bute Inlet or Upper Knight)", warning=FALSE, echo=FALSE, fig.align="center"}
 download.file('https://github.com/Pacific-salmon-assess/SalmonLRP_RetroEval/raw/master/SCChumStudy/Figures/AnnualRetrospective/Bern.IndivRicker_NoSurv_noCUinfill_90/LogisticMod_2012.pdf', './figure/chum-logistic-sgen.pdf', mode="wb")
 knitr::include_graphics('figure/chum-logistic-sgen.pdf')
 ```
