--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -66,21 +66,20 @@ CUs with very different **habitat capacities** may respond differently to simila
 <!--CW: I believe Luke also saw this effect in the Chum study case - i.e. smaller CUs were more likely to be below their benchmarks.-->
 
 
-In a meta-analysis of spawner time-series across Pacific salmon species throughout BC using data extracted from the Pacific Salmon Explorer Tool (PSE 2021)<!--CH: have to add ref to this URL. Add number of time-series included-->,  pairwise correlations in spawner abundances among CUs within SMUs tended to be positive for Pink, Chum, Coho, and Sockeye Salmon (Appendix Figure <!-- add Connors unpublished, or add Brendan as co-author. later preferable-->), providing some support for the use of data-rich CUs to inform CUs without data for those species. One caveat of this analysis is that CUs with available time-series tend to be more heavily managed and may not be representative of those without data which tend to be remote and without direct management interventions. In addition, the four criteria described above were not accounted for in selecting SMUs for inclusion, and so correlations may be biased low. For Chinook Salmon, correlations were more variable among CUs and sometimes negative, possibly due to the inclusion of CUs dominated by both stream-type and ocean-type fish within some SMUs. <!--CH: to check with with Brendan. Which SMUs were negative? Can we improve this guidance piece?-->
+Covariation in productivity is well documented among spatially proximate populations across species [@petermanPatternsCovariationSurvival1998; @pyperSpatialCovariationSurvival2002; @dornerSpatialTemporalPatterns2018], providing some support for the use of data-rich CUs to inform CUs without data. In a meta-analysis of spawner time-series across Pacific salmon species throughout BC using data extracted from the Pacific Salmon Explorer Tool [@pacificsalmonfoundationMethodsAssessingStatus2020],  pairwise correlations in spawner abundances among CUs within SMUs tended to be positive for Pink, Chum, Coho, and Sockeye Salmon (Appendix app:meta-analysis-appendix, Figure \@ref(lrp-smu-corr-plot)). For Chinook Salmon, correlations were more variable among CUs and sometimes negative, in part due to the influence of hatchery production in some of those systems. <!--CH: The 2 SMUs with negative correlations are Georgia Strait Chinook and Johnstone Strait/Mainland Inlet Chinook which have significant hatchery production, and my read of PSE report looks like they used total spawners, not natural-origin spawners--> A pervasive problem with correlation analyses for Pacific salmon is that populations with available time-series tend to be more heavily managed and may not be representative of those without data which tend to be remote and without direct management interventions. <!--CH remove: In addition, the four criteria described have not been accounted, and so correlations may be biased low.--> 
 
-Overall, we suggest caution when representing SMU status with only a subset of CUs, and recommend evaluating and documenting the risks of incorrectly assigning status of data deficient CUs based on neighboring CUs. We also recommend further quantitative evaluation of these criteria using empirical data disaggregated by environmental zones, life-history types and management intensity, among other variables, and supported by simulation evaluation.  These criteria are not meant to be prescriptive, but to provide general guidelines for assessing possible inference for data deficient CUs. 
-
+Overall, we suggest caution when representing SMU status with only a subset of CUs, and recommend evaluating and documenting the risks of incorrectly assigning status of data deficient CUs based on neighboring CUs. We also recommend further quantitative evaluation of these criteria using empirical data disaggregated into groups of CUs with similar environmental conditions, life-history types and management intensity, among other variables, and supported by simulation evaluation.  These criteria are not meant to be prescriptive, but to provide general guidelines for assessing possible inference for data deficient CUs. 
 
 If data-deficient CUs do not meet the criteria for inference from the remaining CUs within an SMU, we recommend collection of CU-level data to inform biological assessments. Data collection would therefore be prioritized for CUs that diverge in threats, environmental drivers, life-history capacities and/or habitat capacities from neighbouring CUs. 
 
 
 ### Proportion of CUs Above Red Status Required to Avoid Serious Harm (Step 4)
 
+@dfoFisheryDecisionMakingFramework2009 indicates that LRPs are based on biological criteria identified by Science, independent of management processes. Given the goal of the Wild Salmon Policy to protect the biodiversity of Pacific salmon in part by maintaining CUs above lower biological benchmarks, we have identified 100$\%$ of CUs as an LRP that will avoid serious harm. Exceptions to this may occur where there is uncertainty or mis-identification in the delineation of CUs (e.g., as for some transboundary CUs @holtbyConservationUnitsPacific2007) or CUs are deemed extinct. Those CUs would be omitted from the total number of (extant) CUs within the SMU. This step does not include cost-benefit trade-offs associated with choosing which CUs to prioritize if only a portion can be conserved under growing threats, including climate change. Those analyses would require collaboration with various sectors involved in the management of the SMU, beyond those involved in the science-based process of identifying LRPs. Some CUs may be naturally more vulnerable to threats because of their biological or population characteristics (e.g., due to small habitat capacities), however, that natural vulnerability does not diminish the serious harm associated with the biodiversity loss if that CU is lost in the face of ongoing threats. <!--CH: this last sentence is meant to get at the possible exemption of CUs that are naturally at low abundance and "red". The counter argument I heard at the TWG meeting was that those CUs still have ongoing threats and so separating 'natural' vulnerability from threats that deplete a CU is tricky, and probably too hard for us to attempt. And the loss of any CU is serious harm.".-->  In addition, for some CUs the potential for rebuilding to above the red zone may be extremely low. These considerations should be identified in a rebuilding potential analysis to prioritize where resources should be allocated in a rebuilding plan (e.g., @carwardinePriorityThreatManagement2019).  Considerations on rebuilding potential  <!--should be part of the management objectives [@kronlundConsiderationsDesignRebuilding2021] but --> are outside scope of identifying LRPs.
 
-The identification of serious harm is a science-based activity, independent of management processes. Given the goal of the Wild Salmon Policy to protect the biodiversity of Pacific salmon in part through the maintaining CUs above lower biological benchmarks, we have identified 100$\%$ of CUs as an LRP that will avoid serious harm. Exceptions to this may occur where there is uncertainty or mis-identification in the delineation of CUs (e.g., as for some transboundary CUs @holtbyConservationUnitsPacific2007) or CUs are deemed extinct. Those CUs would be omitted from the total number of (extant) CUs within the SMU. This step does not include cost-benefit trade-offs associated with choosing which CUs to prioritize if only a portion can be conserved under growing threats, including climate change. Those analyses would require collaboration with various sectors involved in the management of the SMU, beyond those involved in the science-based process of identifying LRPs. Some CUs may be naturally more vulnerable to threats because of their biological or population characteristics (e.g., due to small habitat capacities), however, that natural vulnerability does not diminish the serious harm associated with the biodiversity loss if that CU is lost in the face of ongoing threats. <!--CH: this last sentence is meant to get at the possible exemption of CUs that are naturally at low abundance and "red". The counter argument I heard at the TWG meeting was that those CUs still have ongoing threats and so separating 'natural' vulnerability from threats that deplete a CU is tricky, and probably too hard for us to attempt. And the loss of any CU is serious harm.".-->  In addition, for some CUs the potential for rebuilding to above the red zone may be extremely low. These considerations should be identified in a rebuilding potential analysis to prioritize where resources should be allocated in a rebuilding plan (e.g., @carwardinePriorityThreatManagement2019).  Considerations on rebuilding potential  <!--should be part of the management objectives [@kronlundConsiderationsDesignRebuilding2021] but --> are outside scope of identifying LRPs.
-
-Furthermore, unlike other marine fisheries, threats and management levers for Pacific salmon extend beyond those associated with fisheries that underlie the definition of SMUs and LRPs. The scale of SMUs is often incongruent with the scale of dominant threats and management levers so that LRPs based on 100$\%$ of CUs being above red status may trigger the development of rebuilding plans under Fish Stock provisions when only a component (e.g., a single CU) requires intervention possibly using non-fisheries related levers (e.g., hatcheries or habitat amelioration).  Nevertheless, we have identified 100$\%$ of CUs within the SMU as serious harm under the Fish Stock provisions; triggers and interventions at finer and coarser spatial scales will also be essential to sustain Pacific salmon.<!--CH: This is meant to capture the concern that we might trigger RP when CU is already being managed in other ways, and at a different scales
-CW:Should we recommend (hint) that RP will likely need to be designed to include action at various -->
+Furthermore, unlike many other marine fisheries, threats and management levers for Pacific salmon extend beyond those associated with fisheries that underlie the definition of SMUs and LRPs. The scale of SMUs is often incongruent with the scale of dominant threats and management levers so that LRPs based on 100$\%$ of CUs being above red status may trigger the development of rebuilding plans under Fish Stock provisions when only a component (e.g., a single CU) requires intervention possibly using non-fisheries related levers (e.g., hatcheries or habitat amelioration).  Nevertheless, we have identified 100$\%$ of CUs within the SMU as serious harm under the Fish Stock provisions; triggers and interventions at finer and coarser spatial scales will also be essential to sustain Pacific salmon.<!--CH: This is meant to capture the concern that we might trigger RP when CU is already being managed in other ways, and at a different scales
+CW:Should we recommend (hint) that RP will likely need to be designed to include action at various
+CH: Not exactly sure what was meant here. In the recommendations section, we do mention that MPs beyond aggregate abundance HCRs will need to be considered, e.g., MPs that include fine-scale time-area closures, habitat enhancement at a variety of scales, as well as hatchery supplementation.-->
 
 
 Once LRPs are identified, SMU-level objectives and management procedures can then be evaluated to identify those approaches that best meet objectives, including the prioritization of CU-specific interventions. Furthermore, objectives and management actions can be adapted to a range of spatial scales from CU to regional or multi-SMU scales and then evaluated in a hierarchical context. The proposed LRP presented here of 100$\%$ of component CUs above the red status within an SMU is a first step in that process.
@@ -88,35 +87,34 @@ Once LRPs are identified, SMU-level objectives and management procedures can the
 
 ### Assess Status Relative to Proportion-based LRP (Step 5)
 
-The status of individual CUs is assessed and the proportion of CUs with status above red is then compared to the LRP of 100% identified from step 4.  Where available, we recommend applying CU assessments from recent WSP Integrated Status Assessments, in which multiple metrics, such as abundances and short- and long-term trends, are integrated to assign CU status within an expert-driven process [holtIndicatorsStatusBenchmarks2009a; @grant2017FraserSockeye2020]. Here we define recent as within the most recent generation as a general guideline, though major perturbations such as landslide events may make even recent assessments unrepresentative of current conditions if the impact of those events are not accounted for. <!--CH remove: Over time-periods longer than a generation, the extent to which the assessment is still representative depends on the dynamics of the specific system.-->
+The status of individual CUs is assessed and the proportion of CUs with status above red is then compared to the LRP of 100% identified from step 4.  Where available, we recommend applying CU assessments from recent peer-reviewed WSP Integrated Status Assessments, in which multiple metrics, such as abundances and short- and long-term trends, are integrated to assign CU status within an expert-driven process [holtIndicatorsStatusBenchmarks2009a; @dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016; @grant2017FraserSockeye2020]. Here we define recent as within the most recent generation as a general guideline, though major perturbations such as landslide events may make even recent assessments unrepresentative of current conditions if the impact of those events are not accounted for. <!--CH remove: Over time-periods longer than a generation, the extent to which the assessment is still representative depends on the dynamics of the specific system.-->
 
-Because WSP Integrated status assessments are time-intensive processes and are not available for most CUs, we demonstrate the application of the Pacific Salmon Status Scanner, which is a tool developed by DFO's State of the Salmon Program to rapidly assess CU status under the WSP multidimensional assessment framework (Pestal et al. in prep). More details on this approach are provided in Section \@ref(cu-est-methods) and our companion working paper (Holt et al. in review). Within this framework, CU status depends on variety of population metrics, where the choice of metrics depends on data availability and may differ among CUs within an SMU. The Salmon Scanner integrates status on available metrics to derive an overall status that is comparable among CUs. <!--CH Q; does this last sentence make sense? I'm trying to say that although status of one CU might be based on SR benchmark and another may be based on trends, the resulting statuses from the Salmon Scanner are still comparable-->
+Because WSP Integrated status assessments are time-intensive processes and are not available for most CUs, we demonstrate the application of the Pacific Salmon Status Scanner, which is a tool developed by DFO's State of the Salmon Program to rapidly assess CU status under the WSP multidimensional assessment framework (Pestal et al. in prep). More details on this approach are provided in Section \@ref(cu-est-methods) and our companion working paper (Holt et al. in review). Within this framework, CU status depends on a variety of population metrics, where the choice of metrics depends on data availability and may differ among CUs within an SMU. The Salmon Scanner integrates status on available metrics to derive an overall status that is comparable among CUs. <!--CH Q; does this last sentence make sense? I'm trying to say that although status of one CU might be based on SR benchmark and another may be based on trends, the resulting statuses from the Salmon Scanner are still comparable-->
 
 ### Peer-review Assessments of Status Relative to Proportion-based LRP (Step 6)
 <!--CH comment: this section needs input from Sue-->
 
-We recommend peer-review of the CU data and assessments used in steps 1 and 5 if CU assessment are developed outside of an existing published, peer-reviewed process. Also, we recommend peer-review of decisions on SMU-scale aggregation from steps 2, 3 and 4. This peer review can occur, at least in part, through DFO's State of the Salmon Program's annual implementation of the Rapid Multidimenstional Scanner Tool. The Scanner Tool will be applied annually as part of of a process integrating Tool outputs with local expertise to provide provisional statuses for CUs. Expert review is required to vet statuses derived from the implementation of the Scanner Tool to ensure they are consistent with underlying biological definitions (e.g., WSP red zone is associated with elevated risk of extinction) given the multiple and sometimes conflicting dimensions of status. <!--CH: Ann-Marie suggested an example from Fraser Sockeye Shuswap here, but I wonder if it might make the flow of this section awkward? Happy to consider an inclusion from Ann-Marie--> The outputs from that process can be used as a basis for developing CU-level statuses to inform SMU-level LRPs. For CUs or SMUs not included or not fully reviewed in that annual process and where SMU-scale LRPs are required <!--CH addition: under the Fisheries Act?, but mentioned below, so maybe not needed here, CW doesn't hurt the flow of the sentence to include-->, we recommend a separate SMU-scale peer-review process that includes assessment of component CUs and decisions about data deficiencies and CU representatives, covering steps 1-5. When used to support decisions under Canada's Fisheries Act, the steps involved in LRP development should be documented in a CSAS Research Document, CSAS Science Response, and/or CSAS Science Advice Document.<!--CH question: Is this requirement for CSAS documentation okay? We should ask Julie/Jason to what extent this is consistent with out marine species, and then mention the consistency here. Some TWG participants suggested LRP identification could occur in the rebuilding plan, but this seems awkward as rebuilding objectives may be related to LRPs, or at least they will in other species, so best to keep the 2 processes separate I think.
+We recommend peer-review of the CU data and assessments used in steps 1 and 5 if CU assessment are developed outside of an existing published, peer-reviewed process. Also, we recommend peer-review of decisions on SMU-scale aggregation from steps 2, 3 and 4. This peer review can occur, at least in part, through DFO's State of the Salmon Program's annual implementation of the Pacific Salmon Status Scanner. The Salmon Scanner will be applied annually as part of of a process integrating outputs with local expertise to provide provisional statuses for CUs. Expert review is required to vet statuses derived from the implementation of the Salmon Scanner to ensure they are consistent with underlying biological categories (e.g., WSP red zone is associated with elevated risk of extinction) given the multiple and sometimes conflicting dimensions of status. <!--CH: Ann-Marie suggested an example from Fraser Sockeye Shuswap here, but I wonder if it might make the flow of this section awkward? Happy to consider an inclusion from Ann-Marie--> The outputs from that process can be used as a basis for developing CU-level statuses to inform SMU-level LRPs. For CUs or SMUs not included or not fully reviewed in that annual process and where SMU-scale LRPs are required <!--CH addition: under the Fisheries Act?, but mentioned below, so maybe not needed here, CW doesn't hurt the flow of the sentence to include-->, we recommend a separate SMU-scale peer-review process that includes assessment of component CUs and decisions about data deficiencies and CU representativeness, covering steps 1-5. When used to support decisions under Canada's Fisheries Act, the steps involved in LRP development should be documented in a CSAS Research Document, CSAS Science Response, and/or CSAS Science Advice Report.<!--CH question: Is this requirement for CSAS documentation okay? We should ask Julie/Jason to what extent this is consistent with out marine species, and then mention the consistency here. Some TWG participants suggested LRP identification could occur in the rebuilding plan, but this seems awkward as rebuilding objectives may be related to LRPs, or at least they will in other species, so best to keep the 2 processes separate I think.
 CW: Agree with keeping rebuilding plan and LRP separate. -->
 
 <!--SG comment: if status is approximated with the algorithm and the status on the metric is red, this could trigger an integrated status assessment to derive a formal WSP status prior to triggering LRP. -->
 
-The frequency of SMU-scale peer reviews outside of the annual implementation of the Rapid Multidimensional Scanner Tool will depend on variability in CU-level population dynamics over time and how LRPs and SMU-level assessments are used to inform decision making (e.g., if an SMU is batched under the Fisheries Act), among other factors. In the future, management procedures with various frequencies of assessments could be evaluated in a simulation framework to identify risks of delaying assessments relative to costs of implementing them. 
+The frequency of SMU-scale peer reviews outside of the annual implementation of the Salmon Scanner will depend on variability in CU-level population dynamics over time and how LRPs and SMU-level assessments are used to inform decision making (e.g., if an SMU is batched under the Fisheries Act), among other factors. In the future, management procedures with various frequencies of assessments could be evaluated in a simulation framework to identify risks of delaying assessments relative to costs of implementing them. 
 
 ### Are Aggregate Abundance-Based LRPs Required For Fisheries Management? (Step 7)
 
-<!--CH: Mention how principle 5 supports use of ppn-based LRPs over aggregate abundance-based LRPs (b/c of uncertain assumptions in LR), with some justification for considering aggregate abundance-based LRPs that are statistically integrated so account of uncertainty in CU benchmarks.  -->
+Although proportion-based LRPs may meet requirements under the Fish Stock provisions for Pacific salmon, alternative, abundance-based LRPs may be needed for fisheries management decision making (see Section \@ref(roleLRPs).  For SMUs where harvest at the aggregate scale is a dominant driver of population dynamics and restricting fisheries harvest is a principle lever, an LRP along the metric of aggregate abundances of the SMU may support precautionary management. For example, when LRPs are used to inform a harvest control rule, fishing pressure can be gradually curtailed as aggregate abundances drop towards the LRP to avoid depletion below it. Aggregate abundance-based benchmarks may in some cases be required for local or international management. For example, for Nass and Skeena Sockeye aggregate escapement goals are required under the Pacific Salmon Treaty [@TreatyGovernmentCanada2019], though to comply with the WSP, the status of component CUs should also be considered. 
 
-Although proportion-based LRPs are sufficient under the Fish Stock provisions for Pacific salmon, alternative, abundance-based LRPs may be required for fisheries management decision making (see Section \@ref(roleLRPs).  For SMUs where harvest at the aggregate scale is a dominant driver of population dynamics and restricting fisheries harvest is a principle lever, an LRP along the metric of aggregate abundances of the SMU may support precautionary management. For example, when LRPs are used to inform a harvest control rule, fishing pressure can be gradually curtailed as aggregate abundances drop towards the LRP to avoid depletion below it. Aggregate-based benchmarks may in some cases be required for local or international management. For example, for Nass and Skeena Sockeye aggregate escapement goals are required under the Pacific Salmon Treaty [@TreatyGovernmentCanada2019], though to comply with the WSP, the status of component CUs should also be considered. 
+However, when LRPs are defined within the context of a Management Procedure framework (see Section \@ref(intro)), then an aggregate abundance-based LRP may not be required if the framework can demonstrate the probability of individual CUs having status above red for various management options. For Pacific salmon, management procedures extend beyond harvest control rules to include time-area closures, habitat enhancement or hatchery supplementation to protect individual CUs. Therefore, the choice to develop an aggregate abundance-based LRP depends on the decision context, and should be made in collaboration with various sectors responsible for management decisions within the SMU. If aggregate abundance-based LRPs are not required, assessment of the SMU would be provided from steps 1-6. The following steps (8-12) are relevant if aggregate abundance-based LRPs are required, and build on proportion-based LRPs derived in the previous steps. <!--CH added next 2 sentences-->Risks associated with uncertainties introduced by the inclusion of models to relate aggregate abundances to CU-level statuses should be considered when choosing LRP methods (Principle 5 in Section \@ref(principles)). <!--CH consider removing. Thoughts?: "The ability of aggregate abundance-based LRPs to integrate uncertainties from CU-level benchmarks to the SMU level, unlike proportion-based LRPs, is an advantage to consider."-->
 
-However, if an LRP is defined within the context of a Management Procedure framework (see Section \@ref(intro)), then an aggregate abundance-based LRP may not be required if the framework can demonstrate the probability of individual CUs falling below lower benchmarks for various management options. For Pacific salmon, management procedures extend beyond harvest control rules to include time-area closures, habitat enhancement or hatchery supplementation to protect individual CUs. Therefore, the choice to develop an aggregate abundance-based LRP depends on the decision context, and should be made in collaboration with various sectors responsible for management decisions within the SMU. If aggregate abundance-based LRPs are not required, assessment of the SMU would be provided from steps 1-6. The following steps (8-12) are relevant if aggregate abundance-based LRPs are required, and build on proportion-based LRPs derived in the previous steps. <!--CH added next 2 sentences-->Risk associated with uncertainties introduced by the inclusion of models to relate aggregate abundances to CU-level statuses should be considered when choosing LRP methods (Principle 5 in Section \@ref(principles)). In addition, the ability of aggregate abundance-based LRPs to integrate uncertainties from CU-level benchmarks to the SMU level, unlike proportion-based LRPs, should also be considered.
 
-Like proportion-based LRPs, aggregate abundance-based LRPs are scientifically derived quantities that delineate serious harm to an SMU following the principles outlined in Section \@ref(principles). Although these LRPs can inform harvest control rules, harvest management decisions require consideration of multiple objectives beyond those associated with conservation and serious harm (e.g., socioeconomic objectives). 
+In the context described here, aggregate abundance-based LRPs are scientifically derived quantities that delineate serious harm to an SMU following the principles outlined in Section \@ref(principles). Although these LRPs can inform harvest control rules, harvest management decisions require consideration of multiple objectives beyond those associated with conservation and serious harm (e.g., socioeconomic objectives). 
 
 
 <!-- CW May be appropriate to Subdivide these steps within two sub sections: proportional based LRPS and aggregate abundance based LRPs -->
 ### What is Acceptable Probability of Achieving Proportion-Based LRP? (Step 8)
 
-Aggregate abundance-based LRPs are defined to be consistent with the WSP objective of maintaining biodiversity at the scale of CUs. First, an acceptable probability of achieving the proportion-based LRP (i.e., all CUs above red status) is identified. We provide a range of probabilities and their definitions adapted from likelihood scale used by the International Panel on Climate Change [@mastrandreaGuidanceNoteLead2010], instead of specifying a single probability. <!--CH consider removing the next 2 sentences, and instead borrow text from methods chapter in this WP about LRP being science-derived but with no way to scientific justify a specific p value-->DFO's Guidelines for the Implementation of Fish Stock Provisions states “Unless otherwise defined in stock-specific precautionary approach frameworks, the LRP should be considered breached if the terminal year stock status indicator is estimated to be at or below the LRP with a greater than 50$\%$ probability or if the projected stock status indicator falls below the LRP with a greater than 50$\%$ probability under a zero catch scenario in a 1 year projection” [@dfoScienceGuidelinesSupport2021]. This definition of breaching an LRP suggests a risk neutral approach to identifying serious harm, whereby risks may be accounted for directly and explicitly in harvest control rules that trade-off multiple objectives. In our case studies, we have focused on aggregate-abundances with 50$\%$ probability of achieving proportion-based LRPs as a lower bound on LRP estimates, though other probabilities could be considered on a case-by-case basis.
+Aggregate abundance-based LRPs are defined to be consistent with the WSP objective of maintaining biodiversity at the scale of CUs. First, an acceptable probability of achieving the proportion-based LRP (i.e., all CUs above red status) is identified. We provide LRPs associated with four probabilities, 50%, 66%, 90%, and 99% derived from categories of likelihoods used by the International Panel on Climate Change [@mastrandreaGuidanceNoteLead2010], instead of specifying a single probability because of we could not identify a scientific basis for the choice (see Section \@ref(logisticMethods)). <!--CH consider removing the next 2 sentences as they are about trigger not LRP itself. "DFO's Guidelines for the Implementation of Fish Stock Provisions for Rebuilding states “Unless otherwise defined in stock-specific precautionary approach frameworks, the LRP should be considered breached if the terminal year stock status indicator is estimated to be at or below the LRP with a greater than 50$\%$ probability or if the projected stock status indicator falls below the LRP with a greater than 50$\%$ probability under a zero catch scenario in a 1 year projection” [@dfoScienceGuidelinesSupport2021]."--> In our case studies, we provide logistic regression-based LRPs for those four probabilities, and focus sensitivity analyses on a 50% probability of all component CUs having status above red. This approach to delineating serious harm could be considered risk neutral, where risks may be accounted for directly and explicitly in harvest control rules that trade-off multiple objectives. 
 
 
 \renewcommand*{\arraystretch}{1.6}
@@ -142,13 +140,11 @@ Guidelines for choosing among two types of aggregate abundance-based LRPs are de
 
 Both methods exploit covariation in population dynamics among component CUs, such that when one CU has depleted status and contributes relatively few spawners, it is likely that others CUs also have depleted status contributing few spawners to the aggregate abundance. In contrast, when one CU is considered healthy and contributes many spawners, it is more likely that other CUs are the same when they covary. 
 
-Given, uncertainties and limitations associated with each method, application and comparison of both methods may be prudent instead of choosing a single approach (as in Step 11)
+Given, uncertainties and limitations associated with each method, application and comparison of both methods may be prudent instead of choosing a single approach (as described in Step 11)
 
 #### Empirical logistic regression-based LRPs
 
-
-
-Empirical logistic regression-based LRPs are derived from historical time-series of proportion of CUs above red status, indicated by a single metric metric on spawner abundances or distribution.  <!--CH: the next few sentences can be adjusted depending on text included in Ch 3 of the CS paper. Do we need to do the same thing for ISC chum?--> <!--CW: I think it may be better to move this text down this section. I think it would be better to start with the situations when the logistic regression-based LRP is recommended --> In preliminary analyses, we considered CU status based on the Rapid Multidimensional Scanner Tool, but have chosen to focus on the single metric approach for several reasons. First, the Rapid Multidimensional Scanner Tool includes status on smoothed abundance data (running generational geometric mean) relative to the benchmark, and therefore the status in one year depends on the status in the previous year. Autocorrelation violates the assumption of independence of observations required in the logistic regression. Although logistic regressions can be revised to account for autocorrelated residuals, the available degrees of freedom are often insufficient to increase model complexity given the relatively short time-series of CUs assessments and changes in environmental conditions which sometimes precludes including older data. <!--CH: also sometimes skew in data points towards most years with all CUs above lower benchmarks which limits power of LR-->. In addition, the Rapid Multidimensional Scanner Tool includes metrics on short- and long-term trends in spawner abundances which are less directly related to, and may be completely unrelated to aggregate abundances. For CUs that rely on time trends for status assessments, aggregate abundance-based metrics are likely not appropriate (see below). However, future analyses could explore the possibility of including CU statuses derived from the Rapid Multidimensional Scanner Tool that rely primarily on absolute and relative abundance benchmarks (e.g., 1500 fish or Sgen) with alternative logistic regression-model forms that include autocorrelation. <!--CH: could exclude or move the last sentence?-->
+Empirical logistic regression-based LRPs are derived from historical time-series of the proportion of CUs above red status, indicated by a single metric metric on spawner abundances or distribution.  <!--CH: the next few sentences can be adjusted depending on text included in Ch 3 of the CS paper. Do we need to do the same thing for ISC chum?--> <!--CW: I think it may be better to move this text down this section. I think it would be better to start with the situations when the logistic regression-based LRP is recommended --> In preliminary analyses, we considered CU status based on the Rapid Multidimensional Scanner Tool, but have chosen to focus on the single metric approach for several reasons. First, the Rapid Multidimensional Scanner Tool includes status on smoothed abundance data (running generational geometric mean) relative to the benchmark, and therefore the status in one year depends on the status in the previous year. Autocorrelation violates the assumption of independence of observations required in the logistic regression. Although logistic regressions can be revised to account for autocorrelated residuals, the available degrees of freedom are often insufficient to increase model complexity given the relatively short time-series of CUs assessments and changes in environmental conditions which sometimes precludes including older data. <!--CH: also sometimes skew in data points towards most years with all CUs above lower benchmarks which limits power of LR-->. In addition, the Rapid Multidimensional Scanner Tool includes metrics on short- and long-term trends in spawner abundances which are less directly related to, and may be completely unrelated to aggregate abundances. For CUs that rely on time trends for status assessments, aggregate abundance-based metrics are likely not appropriate (see below). However, future analyses could explore the possibility of including CU statuses derived from the Rapid Multidimensional Scanner Tool that rely primarily on absolute and relative abundance benchmarks (e.g., 1500 fish or Sgen) with alternative logistic regression-model forms that include autocorrelation. <!--CH: could exclude or move the last sentence?-->
 
 <!--CH Q: should we mention that different methods, e.g., percentile vs SR benchmark can be used within the same SMU? However, we shouldn't mix trend-based metrics with abundance-based metrics of CU status for agg-Abund LRPs
 CW: yes, we could mention it as part of bullet 1, suggestion below.-->
