more updates to coho

--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -625,19 +625,20 @@ knitr::include_graphics("figure/coho-projLRPCurve-byER.png")
 
 We compared annual estimates of SMU status relative to LRPs for the range of LRP estimation options considered in this case study (Figure \@ref(fig:coho-statusPlot-withBars)). For all aggregate abundance-based LRPs, we used LRPs estimated using a probability threshold of p = 0.5 (i.e., a 50% probability that all CUs would have status above their lower benchmark). We used the following labelling convention when comparing historical status estimates across LRP estimation methods: *"Metric" : "LRP Method" : "CU Status Method"*. 'Metric' refers to the choice of whether to base an LRP on the proportion of CUs above 'poor' CU status (Prop) or on aggregate SMU-level abundance (Abund). The 'LRP' method only applies to aggregate-abundance based LRPs, for which is can be logistic regression (Logistic) or projection-based (Proj). Finally, the 'CU Status Method' can be based on the Pacific Salmon Status Scanner in which CU abundance-based benchmarks are based on one of the two Ricker models (Scanner-Ricker or Scanner-priorCap). Or, when only a single benchmark is used to characterize CU status, it can be based on S\textsubscript{gen} estimated from one of the two Ricker models (Sgen-Ricker or Sgen-priorCap) or the IFCRT target (IFCRT). For example, when referring to an aggregate abundance-based LRP that is estimated via a logistic regression fit to historical CU status, with CU status estimated relative to S\textsubscript{gen} from the base Ricker model, we label it as "Abund: Logistic: Sgen_Ricker".  
 
-We show historical results for three types of proportional LRP methods: using the proportion of CUs with Pacific Salmon Status Scanner status > red (e.g., Prop: Scanner-Ricker)  using the proportion of CUs with abundance > Sgen (e.g., Prop: Sgen-Ricker), and using the IFCRT distributional target status (Prop: IFCRT) . Holt et al. (in review) recommend that <!--CH: removed 'only'. I think we get the same message without that inclusion?-->the Pacific Salmon Status Scanner should be used to assess status; however, we show results for the single metric S\textsubscript{gen} and IFCRT approaches here to demonstrate how the two approaches differ. This comparison is of interest because our aggregate abundance-based LRPs use status estimates based on a single metric rather than the Pacific Salmon Status Scanner status estimates.   
+We show historical results for three types of proportional LRP methods: using the proportion of CUs with Pacific Salmon Status Scanner status > red (e.g., Prop: Scanner-Ricker), using the proportion of CUs with abundance > Sgen (e.g., Prop: Sgen-Ricker), and using the IFCRT distributional target status (Prop: IFCRT) . Holt et al. (in review) recommend that <!--CH: removed 'only'. I think we get the same message without that inclusion?-->the Pacific Salmon Status Scanner should be used to assess status; however, we show results for the single metric S\textsubscript{gen} and IFCRT approaches to demonstrate how the two approaches differ. This comparison is of interest because our aggregate abundance-based LRPs use status estimates based on a single metric rather than the Pacific Salmon Status Scanner status estimates.   
 
 In addition to the LRP estimation methods presented so far in this case study, we include the full WSP assessment that was conducted in 2014 as an option for estimating CU status for use in a proportion-based LRP. We label this case "Prop : WSP-2014". SMU status would have been assessed as being above the LRP at this time as all CUs were assessed as amber or green.  
 
 In general, estimated LRP breaches coincided with low points in the aggregate abundance time series (2000, 2005 - 2007 and 2015-2017). However, there were differences among methods in the years that SMU status was estimated to be below the LRP, as well as a couple methods for which status was never estimated to be below the LRP (Prop: Sgen-Ricker and Abund: Logistic: IFCRT).  
 
-Comparison of SMU status estimates over time for all LRP estimation methods that used S\textsubscript{gen} estimates from the base Ricker model (first group of four methods in Figure \@ref(fig:coho-statusPlot-withBars)), showed that the LRP was only breached in years 2000, 2015-2017 under the Prop: Scanner-Ricker method. The other three Ricker methods estimated status to remain above the LRP in those years. The other three methods are similar in that they all assess CU status based on a direct comparison of CU-level abundance to S\textsubscript{gen}.  In contrast, the decision tree for the Pacific Salmon Status Scanner includes a step in which CU status is designated as 'red' anytime the generational mean spawning abundance drops below 1500 spawners (Figure \@ref(fig:decision-tree)).  Because estimated S\textsubscript{gen} is less than 1500 spawners for the Fraser Canyon CU, it is possible for the criteria of <1500 spawners in a CU to be breached even though abundance remains above S\textsubscript{gen}.  This situation occurs for the Fraser Canyon CU in 2015-2017. Therefore, LRP methods that use the Pacific Salmon Status Scanner to characterize CU status can be more precautionary than methods that rely on a single S\textsubscript{gen} benchmark.  
+Comparison of SMU status estimates over time for all LRP estimation methods that used S\textsubscript{gen} estimates from the base Ricker model showed differenced between the proportion and aggregate abundance methods (status bars 2-5 in Figure \@ref(fig:coho-statusPlot-withBars)). Under the 'Prop: Scanner-Ricker' method, the LRP was breached in years 2000 and 2015-2017. But the LRP was only triggered in the year 2000 for the 'Prop: Sgen-Ricker' method. The decision tree for the Pacific Salmon Status Scanner includes a step in which CU status is designated as 'red' anytime the generational mean spawning abundance drops below 1500 spawners (Figure \@ref(fig:decision-tree)). Because estimated S\textsubscript{gen} is less than 1500 spawners for the Fraser Canyon CU, it is possible for the criteria of <1500 spawners in a CU to be breached even though abundance remains above S\textsubscript{gen}. This situation occurs for the Fraser Canyon CU in 2015-2017. Therefore, LRP methods that use the Pacific Salmon Status Scanner to characterize CU status can be more precautionary than methods that rely on a single S\textsubscript{gen} benchmark.
 
-In the years 2005-2006, SMU status for both the 'Abund: Proj: Sgen-Ricker' and 'Abund: Logistic:Sgen-Ricker' methods fell below the LRP, while the Prop: Sgen-Ricker methods did not. Declines in aggregate SMU abundance in 2005-2006 were driven by declines in the four larger CUs (which, still remained above their individual S\textsubscript{gen} estimates). Declines in the lower abundance Fraser Canyon CU were not as drastic. As a result, while SMU-level aggregate abundance dropped below the abundance-based LRP, the Fraser Canyon CU that triggered 'red' status in 2015-2017 remained above 1500 spawners and did not trigger the Prop: Scanner-Ricker method. The aggregate abundance-based LRP from the 'Abund: Proj: Sgen-Ricker' estimation method was higher than that from the 'Abund: Logistic: Sgen-Ricker', so only the former method triggered an LRP breach. 
 
-When the Ricker-priorCap model was used to estimate S\textsubscript{gen} instead of the base Ricker model, both S\textsubscript{gen} and LRP estimates were higher than under the base Ricker model formulation. This in turn resulted in more frequent LRP breaches when the Ricker-priorCap model was used (see second group of four methods in Figure ) compa\@ref(fig:coho-statusPlot-withBars)red to when the base Ricker model was used.  Among the 'priorCap' methods, status was most frequently estimated to be below the LRP when the 'Abund: Proj:Sgen-priorCap' method was used; for this method, the LRP was triggered in 12 out of the 21 years between 2000 and 2020. In comparison, the LRP was triggered in 9, 5, and 5 of the 21 years for the 'Prop: Scanner-priorCap', 'Prop: Sgen-priorCap' and 'Abund: Logistic:Sgen-priorCap' methods, respectively.    
+In the years 2005-2006, SMU status for both the 'Abund: Proj: Sgen-Ricker' and 'Abund: Logistic:Sgen-Ricker' methods fell below the LRP, while the 'Prop:' methods did not. Declines in aggregate SMU abundance in 2005-2006 were driven by declines in the four larger CUs (which, still remained above their individual S\textsubscript{gen} estimates). Declines in the lower abundance Fraser Canyon CU were not as drastic. As a result, while SMU-level aggregate abundance dropped below the abundance-based LRP, the Fraser Canyon CU that triggered 'red' status in 2015-2017 remained above 1500 spawners and did not trigger the Prop: Scanner-Ricker method. The aggregate abundance-based LRP from the 'Abund: Proj: Sgen-Ricker' estimation method was higher than that from the 'Abund: Logistic: Sgen-Ricker', so only the former method triggered an LRP breach. 
 
-Finally, SMU status was below the LRP in four (2006, 2015-2017) out of the 21 years between 2000 and 2020 for the 'Prop: IFCRT' method and remained above the LRP in all years under the 'Abund: Logistic: IFCRT method'. The 'Abund: Logistic: IFCRT method' produced the lowest LRP of all logistic methods (Figure \@ref(fig:coho-IM-logisticFit2020) and Table \@ref(tab:logisticLRPs2020)), therefore the LRP tends to get triggered less often.  
+When the Ricker-priorCap model was used to estimate S\textsubscript{gen} instead of the base Ricker model, both S\textsubscript{gen} and LRP estimates were higher than under the base Ricker model formulation. This in turn resulted in more frequent LRP breaches when the Ricker-priorCap model was used (status bars 6-9 Figure \@ref(fig:coho-statusPlot-withBars)).  Among the 'priorCap' methods, status was most frequently estimated to be below the LRP when the 'Abund: Proj:Sgen-priorCap' method was used; for this method, the LRP was triggered in 14 out of the 21 years between 2000 and 2020. In comparison, the LRP was triggered in 9, 9, and 8 of the 21 years for the 'Prop: Scanner-priorCap', 'Prop: Sgen-priorCap' and 'Abund: Logistic:Sgen-priorCap' methods, respectively.    
+
+Finally, SMU status was below the LRP in four (2006, 2015-2017) out of the 21 years for the 'Prop: IFCRT' method, but was only triggered in 2006 under the 'Abund: Logistic: IFCRT method' (status bars 10-11 Figure \@ref(fig:coho-statusPlot-withBars)). The 'Abund: Logistic: IFCRT method' produced the lowest LRP of all logistic methods (Figure \@ref(fig:coho-IM-logisticFit2020) and Table \@ref(tab:logisticLRPs2020)), therefore the LRP tends to get triggered less often.  
 
   
 
@@ -658,7 +659,8 @@ The Interior Fraser Coho SMU is considered a data-rich SMU as it has full stock-
 This Interior Fraser Coho SMU has a long history of using aggregate abundance-based recovery targets and fisheries reference points <!-- include citation --> that were developed based on an underlying relationship between aggregate abundance and the distribution of abundance among sub-populations and CUs <!-- include citation -->. As a result, the Interior Frase Coho SMU was well suited to looking at the application of aggregate abundance-based LRPs, and comparing them to the preferred proportional approach.
 
 
-Our results highlight the complexities in predicting how well aggregate abundance-based LRPs will do at tracking proportion-based LRPs. Comparisons between the abundance-based methods and the proportional methods yielded mixed results. Status was generally consistent for the scenarios in which the Ricker_priorCap model was used, but diverged for the Ricker and IFCRT methods. When estimates of S\textsubscript{gen} were obtained using the Ricker_priorCap model, which produced higher S\textsubscript{gen} and LRP estimates than the Ricker and IFCRT methods, both types of proportion-based LRPs were less precautionary than aggregate abundance-based LRPs. This result was especially pronounced when aggregate abundance-based LRPs were estimated using the projection-based LRP approach.
+Our results highlight the complexities in predicting how well aggregate abundance-based LRPs will do at tracking proportion-based LRPs. Comparisons between the abundance-based methods and the proportional methods yielded mixed results. Status was generally consistent for the scenarios in which the Ricker_priorCap model was used, but diverged more for the Ricker and IFCRT methods. The proportion-based methods tend to get triggered more often in years 2000-2001 and 2015-2017, when abundance of individual CU's are low. Whereas the Aggregate abundance-based methods tend to get triggered ore often in years 2006-2007, the lowest aggregate abundance generational averages for the time-series. 
+
 
 
 
